--- a/product-page-1.html
+++ b/product-page-1.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="main.css" />
     <script src="https://kit.fontawesome.com/5aed494ed7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rancho&family=Roboto:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Product Page</title>
   </head>
   <body>
@@ -50,40 +53,39 @@
     </header>
     <main id="product1s">
       <template data-template="product">
-      <div class="product1-grid">
-        <div></div>
-        <div class="product1">
-          <i class="fas product1-wish fa-heart"></i>
-          <img data-product="image" src="" alt="product1_image" />
-          <div class="product1-name"><h3 data-product="title"></h3></div>
-          <div data-product="price" class="product1-price"></div>
-        </div>
-        <div></div>
-        <div class="product1-info-container">
-          <div class="product1-info-tittle"><h1 data-product="titleH1"></h1></div>
-          <div data-product="description" class="product1-info-description"></div>
-          <div class="product1-info-review">
-            <div data-product="rating" class="product1-star">
-            </div>
-            <span> (23 Reviews)</span>
+        <div class="product1-grid">
+          <div></div>
+          <div class="product1">
+            <i class="fas product1-wish fa-heart"></i>
+            <img data-product="image" src="" alt="product1_image" />
+            <div class="product1-name"><h3 data-product="title"></h3></div>
+            <div data-product="price" class="product1-price"></div>
           </div>
-          <div class="product1-info-quantity">
-            <div>Quantity:</div>
-            <div class="input-group">
-              <div class="input-group-btn">
-                <button id="down" class="btn btn-default" onclick=" down('0')"><i class="fas fa-minus"></i></button>
-              </div>
-              <div><input type="text" id="myNumber" value="1" /></div>
-              <div class="input-group-btn">
-                <button id="up" class="btn btn-default" onclick="up('10')"><i class="fas fa-plus"></i></button>
+          <div></div>
+          <div class="product1-info-container">
+            <div class="product1-info-tittle"><h1 data-product="titleH1"></h1></div>
+            <div data-product="description" class="product1-info-description"></div>
+            <div class="product1-info-review">
+              <div data-product="rating" class="product1-star"></div>
+              <span> (23 Reviews)</span>
+            </div>
+            <div class="product1-info-quantity">
+              <div>Quantity:</div>
+              <div class="input-group">
+                <div class="input-group-btn">
+                  <button id="down" class="btn btn-default" onclick=" down('0')"><i class="fas fa-minus"></i></button>
+                </div>
+                <div><input type="text" id="myNumber" value="1" /></div>
+                <div class="input-group-btn">
+                  <button id="up" class="btn btn-default" onclick="up('10')"><i class="fas fa-plus"></i></button>
+                </div>
               </div>
             </div>
+            <div class="product1-button-add"><button>Add to Cart</button></div>
           </div>
-          <div class="product1-button-add"><button>Add to Cart</button></div>
+          <div></div>
         </div>
-        <div></div>
-      </div>
-    </template>
+      </template>
     </main>
 
     <footer class="footer">
@@ -153,27 +155,26 @@
         });
       });
 
-
-        // The product from json
-        async function getProducts() {
+      // The product from json
+      async function getProducts() {
         let sHeader = window.location.href;
         let pageNumber = sHeader.substring(sHeader.indexOf("?") + 1) - 1;
         let myJson = await fetch("products.json");
         aProducts = await myJson.json();
         let temp = document.querySelector("[data-template]");
         let dest = document.querySelector("#product1s");
-          let clone = temp.cloneNode(true).content;
-          clone.querySelector('[data-product="image"]').src = aProducts[pageNumber].image;
-          clone.querySelector('[data-product="title"]').textContent = aProducts[pageNumber].title;
-          clone.querySelector('[data-product="titleH1"]').textContent = aProducts[pageNumber].title;
-          clone.querySelector('[data-product="price"]').textContent = aProducts[pageNumber].price + " DKK";
-          clone.querySelector('[data-product="description"]').textContent = aProducts[pageNumber].description;
-          for (i = 0; i < aProducts[pageNumber].rating; i++) {
-            clone.querySelector('[data-product="rating"]').insertAdjacentHTML("afterbegin", '<i class="fas fa-star"></i>');
-          }
-          dest.appendChild(clone);
+        let clone = temp.cloneNode(true).content;
+        clone.querySelector('[data-product="image"]').src = aProducts[pageNumber].image;
+        clone.querySelector('[data-product="title"]').textContent = aProducts[pageNumber].title;
+        clone.querySelector('[data-product="titleH1"]').textContent = aProducts[pageNumber].title;
+        clone.querySelector('[data-product="price"]').textContent = aProducts[pageNumber].price + " DKK";
+        clone.querySelector('[data-product="description"]').textContent = aProducts[pageNumber].description;
+        for (i = 0; i < aProducts[pageNumber].rating; i++) {
+          clone.querySelector('[data-product="rating"]').insertAdjacentHTML("afterbegin", '<i class="fas fa-star"></i>');
         }
-        getProducts();
+        dest.appendChild(clone);
+      }
+      getProducts();
     </script>
   </body>
 </html>
