--- a/product-page.html
+++ b/product-page.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="main.css" />
     <script src="https://kit.fontawesome.com/5aed494ed7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rancho&family=Roboto:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Products</title>
   </head>
   <body>
@@ -252,7 +255,9 @@
           for (i = 0; i < product.rating; i++) {
             clone.querySelector('[data-product="rating"]').insertAdjacentHTML("afterbegin", '<i class="fas fa-star"></i>');
           }
-          clone.querySelector('[data-product="link"]').setAttribute('onclick',`location.href = "/product-page-1.html?${productIndex}";`);
+          clone
+            .querySelector('[data-product="link"]')
+            .setAttribute("onclick", `location.href = "/product-page-1.html?${productIndex}";`);
           dest.appendChild(clone);
         });
 
