testing rolling letters

--- a/index.html
+++ b/index.html
@@ -63,14 +63,7 @@
       <div class="full-height">
         <div class="slogan">
           <h1>Giftee</h1>
-          <h2 class='text'>We have made it Giftee
-                               for you to find something 
-
-                               <span class="word wisteria">special</span>
-                               <span class="word belize">unique</span>
-                               <span class="word pomegranate">original</span>
-                               <span class="word green">lovely</span>
-                               <span class="word midnight">extraordinary</span> <span></span> for someone you care about</h2>
+          <h2 class='text'>We have made it <span> Giftee</span> for you to find something unique and special for someone you care about</h2>
         </div>
         <div id="search-container">
           <div class="search-bar">
