--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="full-height">
         <div class="slogan">
           <h1>Giftee</h1>
-          <h2 class='text'>We have made it <span> Giftee</span> for you to find something unique and special for someone you care about</h2>
+          <h2 class='text'>We have made it <span> simple </span> for you to find something unique and special for someone you care about</h2>
         </div>
         <div id="search-container">
           <div class="search-bar">
